# bud

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  audit.toml  data.txt
.github/workflows/: ci.yml  nightly.yml
licenses/: agpl-3.0.json  apache-2.0.json  bsd-2-clause.json  bsd-3-clause.json  bsl-1.0.json  cc0-1.0.json  epl-2.0.json  fetch_licenses.mjs  gpl-2.0.json  gpl-3.0.json  lgpl-2.1.json  licenses.json  mit.json  mpl-2.0.json  unlicense.json
logger/: Cargo.toml
logger/src/: colors.rs  lib.rs
proposals/: global_config.md
runtime/: Cargo.toml
runtime/src/: lib.rs  preprocessor.rs
runtime/src/globals/: mod.rs  print.rs
runtime/src/globals/prompts/: get_prompt.rs  mod.rs
src/: config.rs  constants.rs  main.rs
src/cli/: config_command.rs  mod.rs  new_command.rs  test_command.rs  version_command.rs
src/config/: default_values.rs  license_field.rs  mod.rs
src/file_configuration/: mod.rs
src/file_configuration/global_config/: licenses_field.rs  mod.rs
src/templates/: mod.rs
templates/dummy/.bud/: main.lua  template.toml
templates/hello-world/: .bud.toml
tests/: config.toml
