[package]
name = "bud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
logger = { path = "./logger" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
runtime = { path = "./runtime" }
